--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "sass": "^1.71.0"
+    "sass": "^1.71.0",
+    "swiper": "^10.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
