--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next-intl": "^3.9.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
     "sass": "^1.71.0",
     "swiper": "^10.3.1"
