--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
     "sass": "^1.71.0",
+    "sonner": "^1.5.0",
     "swiper": "^10.3.1"
   },
   "devDependencies": {
