--- a/package.json
+++ b/package.json
@@ -9,16 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.25.4",
+    "@types/react-speech-recognition": "^3.9.5",
     "bcrypt": "^5.1.1",
     "iron-session": "^8.0.2",
     "jsonwebtoken": "^9.0.2",
+    "mini-svg-data-uri": "^1.4.4",
     "mongoose": "^8.4.1",
     "next": "14.1.0",
     "next-intl": "^3.9.1",
+    "openai": "^4.66.1",
+    "preline": "^2.5.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
+    "react-speech-recognition": "^3.10.0",
+    "regenerator-runtime": "^0.14.1",
+    "rtf-parser": "^1.3.3",
     "sass": "^1.71.0",
     "sonner": "^1.5.0",
     "swiper": "^10.3.1"
