--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^9.0.2",
     "mini-svg-data-uri": "^1.4.4",
     "mongoose": "^8.4.1",
+    "nanoid": "^5.0.7",
     "next": "14.1.0",
     "next-intl": "^3.9.1",
     "openai": "^4.66.1",
