--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "bcrypt": "^5.1.1",
     "iron-session": "^8.0.2",
     "jsonwebtoken": "^9.0.2",
-    "mini-svg-data-uri": "^1.4.4",
     "mongoose": "^8.4.1",
     "nanoid": "^5.0.7",
     "next": "14.1.0",
@@ -30,7 +29,8 @@
     "rtf-parser": "^1.3.3",
     "sass": "^1.71.0",
     "sonner": "^1.5.0",
-    "swiper": "^10.3.1"
+    "swiper": "^10.3.1",
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
