--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint-fix": "eslint . --fix"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "3.4",
     "@babel/plugin-transform-runtime": "^7.25.4",
     "@types/react-speech-recognition": "^3.9.5",
     "bcrypt": "^5.1.1",
