--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "sass": "^1.71.0",
     "sonner": "^1.5.0",
     "swiper": "^10.3.1",
+    "swr": "^2.3.3",
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
