--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "openai": "^4.66.1",
     "preline": "^2.5.0",
     "react": "^18",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
